--- a/index.html
+++ b/index.html
@@ -24,13 +24,32 @@
             <a href="#" class="nav__logo">Rahaf.</a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
-                    <li class="nav__item"><a href="#home" class="nav__link"><i class="uil uil-estate"></i>Home</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link"><i class="uil uil-user"></i>About</a></li>
-                    <li class="nav__item"><a href="#skills" class="nav__link"><i class="uil uil-file"></i>Skills</a></li>
-                    <li class="nav__item"><a href="#services" class="nav__link"><i class="uil uil-briefcase-alt"></i>Services</a></li>
-                    <li class="nav__item"><a href="#portfolio" class="nav__link"><i class="uil uil-scenery"></i>Portfolio</a></li>
-                    <li class="nav__item"><a href="#contact" class="nav__link"><i class="uil uil-envelope"></i>Contact Me</a></li>
+                    <li class="nav__item">
+                        <a href="#home" class="nav__link"><i class="uil uil-estate nav__icon"></i>Home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#about" class="nav__link"><i class="uil uil-user nav__icon"></i>About</a>
+                    </li>
+                    <li class="nav__item"><a href="#skills" class="nav__link "><i
+                                class="uil uil-file nav__icon"></i>Skills</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#services" class="nav__link"><i
+                                class="uil uil-briefcase-alt nav__icon"></i>Services</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#portfolio" class="nav__link"><i class="uil uil-scenery nav__icon"></i>Portfolio</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#contact" class="nav__link"><i class="uil uil-envelope nav__icon"></i>Contact Me</a>
+                    </li>
                 </ul>
+                <i class="uil uil-times nav__close" id="nav-close"></i>
+            </div>
+            <div class="nav__btns">
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class="uil uil-apps"></i>
+                </div>
             </div>
         </nav>
     </header>
@@ -39,7 +58,23 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home section" id="home">
-
+            <div class="home__container container grid">
+                <div class="home__content grid">
+                    <div class="home__social">
+                        <a href="https://www.linkedin.com/in/rahaf-al-jazzazi-28635111a/" target="_blank"
+                            class="home__social-icon">
+                            <i class="uil uil-linkedin"></i>
+                        </a>
+                        <a href="https://github.com/RahafJ96" target="_blank" class="home__social-icon">
+                            <i class="uil uil-github"></i>
+                        </a>
+                        <a href="#" class="home__social-icon" target="_blank">
+                            <i class="uil uil-twitter"></i>
+                        </a>
+                    </div>
+                    <div class="home__img"></div>
+                </div>
+            </div>
         </section>
 
         <!--==================== ABOUT ====================-->
