--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="skills__container container grid">
                 <div>
                     <!-- skill 1 -->
-                    <div class="skills__content">
+                    <div class="skills__content skills__open">
                         <div class="skills__header">
                             <i class="uil uil-brackets-curly skills__icon"></i>
                             <div>
@@ -177,7 +177,7 @@
                         </div>
                         <div class="skills__list grid">
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">HTML</h3>
                                     <span class="skills__number">90%</span>
                                 </div>
@@ -187,7 +187,7 @@
 
                             </div>
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">CSS</h3>
                                     <span class="skills__number">80%</span>
                                 </div>
@@ -197,7 +197,7 @@
 
                             </div>
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">JavaScript</h3>
                                     <span class="skills__number">60%</span>
                                 </div>
@@ -207,7 +207,7 @@
 
                             </div>
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">React</h3>
                                     <span class="skills__number">80%</span>
                                 </div>
@@ -219,7 +219,7 @@
                         </div>
                     </div>
                     <!-- skill 2 -->
-                    <div class="skills__content">
+                    <div class="skills__content skills__close">
                         <div class="skills__header">
                             <i class="uil uil-server-network skills__icon"></i>
                             <div>
@@ -230,7 +230,7 @@
                         </div>
                         <div class="skills__list grid">
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">Java</h3>
                                     <span class="skills__number">50%</span>
                                 </div>
@@ -240,7 +240,7 @@
 
                             </div>
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">PHP</h3>
                                     <span class="skills__number">70%</span>
                                 </div>
@@ -250,7 +250,7 @@
 
                             </div>
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">Firebase</h3>
                                     <span class="skills__number">60%</span>
                                 </div>
@@ -260,7 +260,7 @@
 
                             </div>
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">AWS</h3>
                                     <span class="skills__number">40%</span>
                                 </div>
@@ -272,9 +272,9 @@
                         </div>
                     </div>
                     <!-- skill 3 -->
-                    <div class="skills__content">
+                    <div class="skills__content skills__close">
                         <div class="skills__header">
-                            <i class="uil uil-swatcbook skills__icon"></i>
+                            <i class="uil uil-swatchbook skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Designer</h1>
                                 <span class="skills__subtitle">More than 3 years</span>
@@ -283,7 +283,7 @@
                         </div>
                         <div class="skills__list grid">
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">Photoshop</h3>
                                     <span class="skills__number">75%</span>
                                 </div>
@@ -293,7 +293,7 @@
 
                             </div>
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">Figma</h3>
                                     <span class="skills__number">60%</span>
                                 </div>
@@ -303,7 +303,7 @@
 
                             </div>
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">Illustrator</h3>
                                     <span class="skills__number">70%</span>
                                 </div>
@@ -313,12 +313,12 @@
 
                             </div>
                             <div class="skills__data">
-                                <div class="skills__title">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">Adobe XD</h3>
                                     <span class="skills__number">90%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__aws"></span>
+                                    <span class="skills__percentage skills__xd"></span>
                                 </div>
 
                             </div>
@@ -330,6 +330,139 @@
 
         <!--==================== QUALIFICATION ====================-->
         <section class="qualification section">
+            <h2 class="section__title">Qualification</h2>
+            <span class="section__subtitle">My personal Journey</span>
+            <div class="qualification__container container">
+                <div class="qualification__tabs">
+                    <div class="qualification__button button--flex">
+                        <i class="uil uil-graduation-cap qualification__icon"></i>
+                        Education
+                    </div>
+                    <div class="qualification__button button--flex">
+                        <i class="uil uil-briefcase-alt qualification__icon"></i>
+                        Work
+                    </div>
+                </div>
+                <div class="qualification__sections">
+                    <!-- qualification 1 -->
+                    <div class="qualification__content">
+                        <!-- q1 -->
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">Full-Stack Development Bootcamp</h3>
+                                <span class="qualification__subtitle">Luminus Technical University
+                                    College</span>
+                                <div class="qualification__calender">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    APR.2021 - DEC.2021
+                                </div>
+                            </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+                        <!-- q2 -->
+                        <div class="qualification__data">
+                            <div></div>
+
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__title">Bachelor degree in Electrical and Communication
+                                    engineering</h3>
+                                <span class="qualification__subtitle">German Jordanian University </span>
+                                <div class="qualification__calender">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    SEP.2014 - OCT.2020
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <!-- q3 -->
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title"> Electrical engineering
+                                </h3>
+                                <span class="qualification__subtitle">Hochschule Bremen </span>
+                                <div class="qualification__calender">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    MAR.2019 - MAR.2020
+                                </div>
+                            </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- qualification 2 -->
+                    <div class="qualification__content">
+                        <!-- q1 -->
+                        <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                            <div>
+                                <h3 class="qualification__title">Full-Stack Developer</h3>
+                                <span class="qualification__subtitle">Raia-Media</span>
+                                <div class="qualification__calender">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    DEC 2021 - MAR 2022
+                                </div>
+                            </div>
+
+                        </div>
+                        <!-- q2 -->
+                        <div class="qualification__data">
+
+
+                            <div>
+                                <h3 class="qualification__title">Junior web developer
+                                </h3>
+                                <span class="qualification__subtitle">Deutsche Telekom AG </span>
+                                <div class="qualification__calender">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    SEP 2019 - OCT 2020
+                                </div>
+                            </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+
+                        </div>
+
+                        <!-- q3 -->
+                        <div class="qualification__data">
+                            <div></div>
+
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <!-- <span class="qualification__line"></span> -->
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__title"> Intern as a project manager
+                                </h3>
+                                <span class="qualification__subtitle">JETT company for renewable Energy </span>
+                                <div class="qualification__calender">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    JAN 2021 - MAR 2021
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
 
